--- a/example/public/index.html
+++ b/example/public/index.html
@@ -8,6 +8,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
     <title>react-elastic-carousel</title>
+    <link rel="stylesheet" type="text/css" href="test.css">
   </head>
 
   <body>
