--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <div id="root" />
-    <script src="/static/js/runtime~app.6f29d85408604ff7cbe9.js"></script>
-    <script src="/static/js/vendors.4b2069ac.js"></script>
-    <script src="/static/js/app.854f3e8e.js"></script>
+    <script src="static/js/runtime~app.6f29d85408604ff7cbe9.js"></script>
+    <script src="static/js/vendors.4b2069ac.js"></script>
+    <script src="static/js/app.854f3e8e.js"></script>
 </body>
 
 </html>
