--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>React Elastic Carousel</title>
-    <link rel="stylesheet" href="https://unpkg.com/codemirror@5.39.2/lib/codemirror.css" />
-    <link rel="stylesheet" href="https://codemirror.net/theme/dracula.css">
+    <link rel="stylesheet" href="//unpkg.com/codemirror@5.39.2/lib/codemirror.css" />
+    <link rel="stylesheet" href="//codemirror.net/theme/dracula.css">
 </head>
 
 <body>
