--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="A flexible and responsive carousel component for react">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>React Elastic Carousel</title>
-    <link rel="stylesheet" href="//unpkg.com/codemirror@5.39.2/lib/codemirror.css" />
-    <link rel="stylesheet" href="//codemirror.net/theme/dracula.css">
-</head>
-
-<body>
-    <div id="root" />
-    <script src="/react-elastic-carousel/static/js/runtime~app.6f29d85408604ff7cbe9.js"></script>
-    <script src="/react-elastic-carousel/static/js/vendors.4b2069ac.js"></script>
-    <script src="/react-elastic-carousel/static/js/app.854f3e8e.js"></script>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="description" content="A flexible and responsive carousel component for react"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>React Elastic Carousel</title><link rel="stylesheet" href="https://unpkg.com/codemirror@5.39.2/lib/codemirror.css"/><link rel="stylesheet" href="https://codemirror.net/theme/dracula.css"></head><body><div id="root"/><script src="react-elastic-carousel/static/js/runtime~app.4056ac829f51921d9480.js"></script><script src="react-elastic-carousel/static/js/vendors.8556c187.js"></script><script src="react-elastic-carousel/static/js/app.1d07b6b3.js"></script></body></html>
