--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="A flexible and responsive carousel component for react">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>React Elastic Carousel</title>
-    <link rel="stylesheet" href="https://unpkg.com/codemirror@5.39.2/lib/codemirror.css" />
-    <link rel="stylesheet" href="https://codemirror.net/theme/dracula.css">
-</head>
-
-<body>
-    <div id="root" />
-    <script src="/react-elastic-carousel/static/js/runtime~app.fc5828bbbc2a68e663b1.js"></script>
-    <script src="/react-elastic-carousel/static/js/vendors.8556c187.js"></script>
-    <script src="/react-elastic-carousel/static/js/app.b8da98a7.js"></script>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="description" content="A flexible and responsive carousel component for react"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>React Elastic Carousel</title><link rel="stylesheet" href="https://unpkg.com/codemirror@5.39.2/lib/codemirror.css"/><link rel="stylesheet" href="https://codemirror.net/theme/dracula.css"></head><body><div id="root"/><script src="/react-elastic-carousel/static/js/runtime~app.a6f1c99fbeec04777d8a.js"></script><script src="/react-elastic-carousel/static/js/vendors.d198d5cd.js"></script><script src="/react-elastic-carousel/static/js/app.6f367c58.js"></script></body></html>
