--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="description" content="A flexible and responsive carousel component for react"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>React Elastic Carousel</title><link rel="stylesheet" href="https://unpkg.com/codemirror@5.39.2/lib/codemirror.css"/><link rel="stylesheet" href="//codemirror.net/theme/dracula.css"></head><body><div id="root"/><script src="//sag1v.github.io/react-elastic-carousel/static/js/runtime~app.5b9673c0f7e269056677.js"></script><script src="//sag1v.github.io/react-elastic-carousel/static/js/vendors.91bbb3e6.js"></script><script src="//sag1v.github.io/react-elastic-carousel/static/js/app.53cf8a1c.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="A flexible and responsive carousel component for react">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>React Elastic Carousel</title>
+    <link rel="stylesheet" href="https://unpkg.com/codemirror@5.39.2/lib/codemirror.css" />
+    <link rel="stylesheet" href="//codemirror.net/theme/dracula.css">
+</head>
+
+<body>
+    <div id="root" />
+    <script src="/react-elastic-carousel/static/js/runtime~app.ba60bd9e252d9d9f257c.js"></script>
+    <script src="/react-elastic-carousel/static/js/vendors.7e6fa6b9.js"></script>
+    <script src="/react-elastic-carousel/static/js/app.8a6015c7.js"></script>
+</body>
+
+</html>
