--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="A flexible and responsive carousel component for react">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>React Elastic Carousel</title>
-    <link rel="stylesheet" href="https://unpkg.com/codemirror@5.39.2/lib/codemirror.css" />
-    <link rel="stylesheet" href="//codemirror.net/theme/dracula.css">
-</head>
-
-<body>
-    <div id="root" />
-    <script src="/react-elastic-carousel/static/js/runtime~app.ba60bd9e252d9d9f257c.js"></script>
-    <script src="/react-elastic-carousel/static/js/vendors.7e6fa6b9.js"></script>
-    <script src="/react-elastic-carousel/static/js/app.8a6015c7.js"></script>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="description" content="A flexible and responsive carousel component for react"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>React Elastic Carousel</title><link rel="stylesheet" href="https://unpkg.com/codemirror@5.39.2/lib/codemirror.css"/><link rel="stylesheet" href="//codemirror.net/theme/dracula.css"></head><body><div id="root"/><script src="/react-elastic-carousel/static/js/runtime~app.93e841c93db6963f476d.js"></script><script src="/react-elastic-carousel/static/js/vendors.afe1fc3c.js"></script><script src="/react-elastic-carousel/static/js/app.7f36063f.js"></script></body></html>
